gui_debug.log
  File "/Users/mac/Desktop/PYTHON FOLDER/Main.py", line 545
    def show_debtors():
    ^^^
IndentationError: expected an indented block after 'try' statement on line 544
